@@ -40,7 +40,12 @@ public:
   explicit Replayer(std::vector<std::string> args)
   {
     const char* actor_name = args[0].c_str();
-    simgrid::xbt::replay_runner(actor_name, nullptr);
+    if (args.size() > 1) { // split mode, the trace file was provided in the deployment file
+      const char* trace_filename = args[1].c_str();
+      simgrid::xbt::replay_runner(actor_name, trace_filename);
+    } else { // Merged mode
+      simgrid::xbt::replay_runner(actor_name);
+    }
   }
 
   void operator()() const
@@ -108,20 +113,15 @@ int main(int argc, char* argv[])
   e.register_actor<Replayer>("p0");
   e.load_deployment(argv[2]);
 
+  if (argv[3] != nullptr)
+    xbt_replay_set_tracefile(argv[3]);
+
   /*   Action registration */
   xbt_replay_action_register("open", Replayer::open);
   xbt_replay_action_register("read", Replayer::read);
   xbt_replay_action_register("close", Replayer::close);
 
-  std::ifstream ifs;
-  if (argv[3]) {
-    ifs.open(argv[3], std::ifstream::in);
-    simgrid::xbt::action_fs = &ifs;
-  }
-
   e.run();
-
-  simgrid::xbt::action_fs = nullptr;
 
   XBT_INFO("Simulation time %g", simgrid::s4u::Engine::get_clock());
 
