@@ -19,10 +19,12 @@ int main(int argc, char* argv[])
     return 1;
   }
 
-  const char* instance_id    = properties->at("instance_id").c_str();
-  const int rank             = xbt_str_parse_int(properties->at("rank").c_str(), "Cannot parse rank");
-  const char* trace_filename = argv[1];
-  double start_delay_flops   = 0;
+  const char* instance_id = properties->at("instance_id").c_str();
+  const int rank          = xbt_str_parse_int(properties->at("rank").c_str(), "Cannot parse rank");
+  const char* shared_trace =
+      simgrid::s4u::Actor::self()->get_property("tracefile"); // Cannot use properties because this can be nullptr
+  const char* private_trace = argv[1];
+  double start_delay_flops  = 0;
 
   if (argc > 2) {
     start_delay_flops = xbt_str_parse_double(argv[2], "Cannot parse start_delay_flops");
@@ -37,6 +39,8 @@ int main(int argc, char* argv[])
   xbt_assert(new_rank == rank, "Rank inconsistency. Got %d, expected %d", new_rank, rank);
 
   /* The regular run of the replayer */
-  smpi_replay_main(rank, trace_filename);
+  if (shared_trace)
+    xbt_replay_set_tracefile(shared_trace);
+  smpi_replay_main(rank, private_trace);
   return 0;
 }
