@@ -35,6 +35,7 @@ Documentation:
 Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
  (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
 - FG#37: Parallel tasks are limited to 1 core per host
+- FG#62: Running "smpirun -replay" on large networks
 - GH#343: Wrong consumed energy when an exec timeouts
 
 ----------------------------------------------------------------------------
